Closed Bug 1014819 Opened 10 years ago Closed 10 years ago

Prepending SPS/PPS H.264 packets when missing in OMX encoder output is broken

Categories

(Core :: WebRTC: Audio/Video, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: jesup, Assigned: jesup)

References

Details

Attachments

(2 files, 1 obsolete file)

The OMX H.264 encoder on Flame's tries to insert SPS/PPS before any IDR (iframe) that doesn't include them.  Unfortunately, it tries to fetch them from stagefright, which doesn't work (at least not on the Flame with JB gonk).

Attached will be a patch that drops the dependency on stagefright and works.
includes some cleanup and logging.  Depends on other patches in the queue to apply
Attachment #8427260 - Attachment is obsolete: true
Attachment #8427261 - Flags: review?(jolin)
Attachment #8427264 - Flags: review?(roc)
Comment on attachment 8427261 [details] [diff] [review]
Replace OMX GetCodecConfig with straight caching of H.264 SPS/PPS

Review of attachment 8427261 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM. Having our own copy of parameter sets also saves the overhead of reading them from stagefright per I-frame.
Attachment #8427261 - Flags: review?(jolin) → review+
Blocks: 1003040
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: