Bug 1014819: Replace OMX GetCodecConfig with straight caching of H.264 SPS/PPS r=jhlin